# MouseKeyRecorder

./: .clang-format  .gitignore  CMakeLists.txt  README.md  codecov.yml  mouserecorder.conf  mouserecorder.desktop  mouserecorder.desktop.in  test_mouserecorder.conf
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  release.yml
cmake/: version.cmake
scripts/: VERSION_MANAGEMENT.md  version.sh
src/: CMakeLists.txt  main.cpp  version.hpp.in
src/application/: MouseRecorderApp.cpp  MouseRecorderApp.hpp
src/core/: Configuration.cpp  Configuration.hpp  Event.cpp  Event.hpp  EventTypes.hpp  IConfiguration.hpp  IEventPlayer.hpp  IEventRecorder.hpp  IEventStorage.hpp  MouseMovementOptimizer.cpp  MouseMovementOptimizer.hpp  QtConfiguration.cpp  QtConfiguration.hpp  SpdlogConfig.hpp
src/core/serialization/: EventSerializerFactory.cpp  EventSerializerFactory.hpp  IEventSerializer.hpp  NlohmannJsonEventSerializer.cpp  NlohmannJsonEventSerializer.hpp  PugixmlEventSerializer.cpp  PugixmlEventSerializer.hpp  QtJsonEventSerializer.cpp  QtJsonEventSerializer.hpp  QtXmlEventSerializer.cpp  QtXmlEventSerializer.hpp
src/gui/: ConfigurationWidget.cpp  ConfigurationWidget.hpp  MainWindow.cpp  MainWindow.hpp  PlaybackWidget.cpp  PlaybackWidget.hpp  RecordingWidget.cpp  RecordingWidget.hpp  TestUtils.hpp
src/gui/ui/: ConfigurationWidget.ui  MainWindow.ui  PlaybackWidget.ui  RecordingWidget.ui
src/platform/linux/: LinuxEventCapture.cpp  LinuxEventCapture.hpp  LinuxEventReplay.cpp  LinuxEventReplay.hpp
src/platform/windows/: WindowsEventCapture.cpp  WindowsEventCapture.hpp  WindowsEventReplay.cpp  WindowsEventReplay.hpp
src/resources/: icons.qrc
src/storage/: BinaryEventStorage.cpp  BinaryEventStorage.hpp  EventStorageFactory.cpp  EventStorageFactory.hpp  JsonEventStorage.cpp  JsonEventStorage.hpp  XmlEventStorage.cpp  XmlEventStorage.hpp
tests/: CMakeLists.txt  test_main.cpp
tests/application/: test_MouseRecorderApp.cpp  test_ShutdownBehavior.cpp
tests/core/: test_Event.cpp  test_EventRecording.cpp  test_MouseMovementOptimizer.cpp  test_QtConfiguration.cpp
tests/gui/: test_ConfigurationPersistence.cpp  test_ExportFunctionality.cpp  test_GlobalShortcuts.cpp  test_MainWindow.cpp  test_PlaybackWidget.cpp  test_RecordingWidget.cpp  test_SystemTrayFunctionality.cpp  test_SystemTrayKeyboardShortcuts.cpp  test_UIIntegration.cpp  test_UIStateSynchronization.cpp
tests/integration/: test_E2EPlayback.cpp  test_MouseMovementOptimization.cpp  test_PlaybackIntegration.cpp  test_SystemTrayAndShortcuts.cpp
tests/platform/: test_LinuxEventCapture.cpp  test_LinuxEventReplay.cpp
tests/platform/linux/: test_LinuxEventCapture.cpp  test_LinuxEventReplay.cpp
tests/platform/windows/: test_WindowsEventCapture.cpp  test_WindowsEventReplay.cpp
tests/storage/: test_EventStorage.cpp  test_EventStorageFormats.cpp  test_EventStorageMetadata.cpp
